2006-03-24  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-eds.cpp: Fixed with the eds addressbooks,
	whereby removing all local addressbooks then trying to create one
	had a bad effect.

2006-03-24  Julien Puydt  <jpuydt@free.fr>

	* src/gui/misc.cpp: Fixed #335784, thanks Simon Wood for the report.
	* NEWS: Told about previous.

2006-03-19  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp: Improved error message when a request
	timeout SIP message is received.

2006-03-23  Julien Puydt  <jpuydt@free.fr>

	* src/gui/addressbook.cpp: Fixed #334960.
	* NEWS: Told about previous.

2006-03-23  Jan Schampera <jan.schampera@unix.net>

	* src/gui/addressbook.cpp: deleted 2 weird characters (unicode-rest
	from the previous commit) that made compilation impossible

2006-03-23  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-gmconf.cpp, src/gui/addressbook.cpp: Fixed
	#335472, thanks to Jan Schampera.
	* NEWS: Told about previous.

2006-03-22  Julien Puydt  <jpuydt@free.fr>

	* ekiga.desktop.in.in: Fixed #335457, thanks to Vincent Fretin.

2006-03-22  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-22  Julien Puydt  <jpuydt@free.fr>

	* ekiga.desktop.in.in: Fixed #61727, thanks to Vincent Fretin.

2006-03-21  Jan Schampera <jan.schampera@unix.net>

	* src/gui/druid.cpp: Fixed useless focus grabbing in druid which made
	some pages impossible to get the focus (doesn't actually fix a bug)
	* NEWS: updated.

2006-03-21  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callshistory.cpp: Fixed #335377.

2006-03-21  Julien Puydt  <jpuydt@free.fr>

	* lib/gmmarshallers.c, lib/gmmarshallers.h, lib/gmmarshallers.list:
	Added a marshaller for a signal with a string and a boolean.
	* src/components/dbus_stub.xml, src/components/dbus.cpp,
	src/components/dbus.h: Added the OnHoldInfo signal and the
	gnomemeeting_dbus_component_set_call_on_hold function.