@@ -1,3 +1,7 @@
+2006-03-25  Julien Puydt  <jpuydt@free.fr>
+
+	* lib/gmcontacts/gmcontacts-avahi.cpp: Cosmetic changes.
+
 2006-03-24  Julien Puydt  <jpuydt@free.fr>
 
 	* lib/gmcontacts/gmcontacts-eds.cpp: Fixed with the eds addressbooks,
